[gd_scene load_steps=8 format=3 uid="uid://dv7qh02nms5t0"]

[ext_resource type="Script" uid="uid://b687oh7w8ydk6" path="res://Scripts/Settings.gd" id="1_4hxq3"]
[ext_resource type="FontFile" uid="uid://b563rqedfhe7w" path="res://Textures/Fonts/HelpMe.ttf" id="2_yrknh"]
[ext_resource type="FontFile" uid="uid://do26357pp65jx" path="res://Textures/Fonts/who asks satan.ttf" id="3_w1nw0"]

[sub_resource type="LabelSettings" id="LabelSettings_mjqtt"]
font = ExtResource("3_w1nw0")
font_size = 70
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ppjuv"]
font = ExtResource("2_yrknh")
font_size = 20
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hxq3"]
bg_color = Color(8.731842e-06, 8.731845e-06, 8.731833e-06, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ipgag"]
font = ExtResource("2_yrknh")
font_size = 20
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_4hxq3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="SettingsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Settings:"
label_settings = SubResource("LabelSettings_mjqtt")
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume: "
label_settings = SubResource("LabelSettings_ppjuv")

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 16)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_4hxq3")
step = 0.01
value = 50.0

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "DIFFICULTY: "
label_settings = SubResource("LabelSettings_ipgag")

[node name="DifficultButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_yrknh")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_yrknh")
text = "BACK"
expand_icon = true
